--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,10 +9,22 @@
 
     <%= stylesheet_link_tag "application", "data-turbo-track": "reload" %>
     <%= javascript_importmap_tags %>
+
+     <%= javascript_include_tag 'https://code.jquery.com/jquery-3.6.0.min.js' %>
+    <link href="https://cdn.jsdelivr.net/npm/select2@4.1.0-rc.0/dist/css/select2.min.css" rel="stylesheet" />
+    <script src="https://cdn.jsdelivr.net/npm/select2@4.1.0-rc.0/dist/js/select2.min.js"></script>
   </head>
 
   <body>
     <main class="prose mx-auto mt-28 px-5">
+      <% if notice %>
+        <%= tag.p notice, class:"bg-blue-100 text-blue-800 p-2 rounded"%>
+      <% end %>
+
+      <% if alert %>
+        <%= tag.p alert, class:"bg-yellow-100 text-yellow-800 p-2 rounded"%>
+      <% end %>
+
       <%= yield %>
     </main>
   </body>
