--- a/app/views/links/index.html.erb
+++ b/app/views/links/index.html.erb
@@ -1,4 +1,16 @@
-<h1> URL Shortener </h1>
+<div class="flex items-center justify-between">
+    <h1> URL Shortener </h1>
+
+  <div>
+    <% if user_signed_in? %>
+      <%= link_to "Profile", edit_user_registration_path %>
+      <%= button_to "Logout", destroy_user_session_path, method: :delete %>
+    <% else %>
+      <%= link_to "Sign up", new_user_registration_path %>
+      <%= link_to "Login", new_user_session_path %>
+    <% end %>
+  </div>
+</div>
 
 <select class="js-example-basic-single" name="state">
   <option value="AL">Alabama</option>
