--- a/app/views/links/show.html.erb
+++ b/app/views/links/show.html.erb
@@ -13,6 +13,7 @@
   <% end %>
 
   <%= tag.div pluralize(@link.views_count, "view") %>
-  <%= link_to "Edit", edit_link_path(@link), class: "px-2 py-1.5 rounded bg-gray-100 no-underline" %>
+  <%= button_tag "Copy", class: "font-medium px-2 py-1.5 rounded bg-gray-100 no-underline", data: {controller: "clipboard", clipboard_text: view_url(@link)} %>
+  <%= link_to "Edit", edit_link_path(@link), class: "px-2 py-1.5 rounded bg-gray-100 no-underline" if @link.editable_by?(current_user) %>
 </div>
 <%= line_chart @link.views.group_by_day(:created_at, range: 2.weeks.ago..Time.now, expand_range: true).count %>
